# gamepad_mouse

./: Cargo.toml  README.md  main.rs  rustfmt.toml
src/: config.rs  config_builder.rs  main.rs  mouse.rs
