[package]
name = "gamepad_mouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
enigo = "0.0.14"

[[bin]]
name = "gamepad_mouse"
path = "main.rs"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "unpacked"
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 16
rpath = false
strip = "symbols"
